assets/styles/index.css
/* // Apply a natural box layout model to all elements
// but allowing components to change
// http://www.paulirish.com/2012/box-sizing-border-box-ftw/ */

@font-face {
  font-family: "PressStart2P-Regular";
  src: url("~/assets/fonts/pressstart2p-regular-webfont.woff");
  src: url("~/assets/fonts/pressstart2p-regular-webfont.woff2");
}

html {
    box-sizing: border-box;
}

body {
  background-color: black;
}
*, *:before, *:after {
    box-sizing: inherit;
}

#balloon_souls_canvas {

}
#ui {
  border: 1px solid black;
  font-family: 'PressStart2P-Regular', Arial, sans-serif;
  display: block;
  width: 1000px;
  margin-left: auto;
  margin-right: auto;
  height: auto;
}

#content {
  display:flex;
  justify-content: center;
}
#btnStart {
  text-align: center;
}

#title {
  text-align: center;
  font-size: 4em;
  left: 21%;
  top: 20%;
  position: absolute;
  text-align: center;
  background: -webkit-linear-gradient(#eee, #333);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  z-index: 1;
}

#welcome {
  top: 50%;
  left: 30%;

  position: absolute;
  text-align: center;
  margin-left: auto;
  margin-right: auto;
}

#youDied {
  display: block;
  font-family: 'PressStart2P-Regular', Arial, sans-serif;
  position: absolute;
  top: 0px;
  text-align: center;
  padding-top: 20%;
  width: 99vw;
  height:99vh;
  display: none;
  background-color: black;
  color: red;
  font-size: 8em;
  z-index: 1;
}

#score {
  margin-black: 15px;
  border: 1px solid black;
  display: none;
  margin-left: 15px;
  margin-bottom: 10px;
  font-family: 'PressStart2P-Regular', Arial, sans-serif;
  color: white;
}

#bg {
  visibility: hidden;
}
#audio-control {
  border: 1px solid black;
  display: inline;
  position: absolute;
  top:5%;
  left: 70%;

  text-align:center;
  font-family: 'PressStart2P-Regular', Arial, sans-serif;
  color: white;
  z-index: 2;
}

#hi-score {
  border: 1px solid black;
  display: none;
  margin-left: 15px;
  margin-bottom: 10px;
  font-family: 'PressStart2P-Regular', Arial, sans-serif;
  color: white;
}
.in-line {
  display: inline;
}
#hi-score-val {
  border: 1px solid black;
  display: none;
  margin-left: 15px;
  margin-bottom: 10px;
  font-family: 'PressStart2P-Regular', Arial, sans-serif;
  color: white;
}
#scoreEnd {
  position: absolute;
  color: white;
  font-size: 24px;
}

#getGoing {
  margin-top: -100px;
  position: absolute;
  color: white;
  font-size: 24px;
}

#streak {
  border: 1px solid black;
  display: none;
  margin-left: 15px;
  margin-bottom: 10px;
  font-family: 'PressStart2P-Regular', Arial, sans-serif;
  color: white;
}


.eightbit {
  font-family: 'PressStart2P-Regular', Arial, sans-serif;
  color: orange;
}


.animated {
            -webkit-animation-duration: 5s;
            animation-duration: 5s;
            -webkit-animation-fill-mode: both;
            animation-fill-mode: both;
         }

         @-webkit-keyframes fadeIn {
            0% {opacity: 0;}
            100% {opacity: 1;}
         }

         @keyframes fadeIn {
            0% {opacity: 0;}
            100% {opacity: 1;}
         }

         .fadeIn {
            -webkit-animation-name: fadeIn;
            animation-name: fadeIn;
         }

